boltffi_backend/tests/snapshots/swift__swift_target_renders_parameter_defaults.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"exports/defaulted_callables\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public struct DefaultAmount: Hashable, Equatable, Sendable {
    public var value: Int32

    public init(value: Int32) {
        self.value = value
    }

    @usableFromInline init(fromC c: ___DefaultAmount) {
        self.init(value: c.value)
    }

    @usableFromInline var cValue: ___DefaultAmount {
        ___DefaultAmount(value: value)
    }

    @inlinable static func decode(from reader: inout WireReader) -> DefaultAmount {
        DefaultAmount(value: reader.readI32())
    }

    @inlinable func encode(to writer: inout WireWriter) {
        writer.writeI32(self.value)
    }

    public static func new(value: Int32 = 3) -> DefaultAmount {
        return DefaultAmount(fromC: boltffi_init_record_demo_default_amount_new(value))
    }

    public init(withValue value: Int32 = 5) {
        self = DefaultAmount(fromC: boltffi_init_record_demo_default_amount_with_value(value))
    }

    public func offset(step: Int32 = 2) -> Int32 {
        return boltffi_method_record_demo_default_amount_offset(self.cValue, step)
    }
}

public enum DefaultMode: UInt8, Hashable, Sendable, CaseIterable {
    case quiet = 1
    case loud = 2

    @usableFromInline init(fromC c: UInt8) {
        self = DefaultMode(rawValue: c)!
    }

    @usableFromInline var cValue: UInt8 {
        rawValue
    }

    public func matches(mode: DefaultMode = DefaultMode.quiet) -> Bool {
        return boltffi_method_enum_demo_default_mode_matches(self.cValue, mode.cValue)
    }
}

public final class DefaultCounter {
    private var __boltffiHandle: UInt64 = 0

    @usableFromInline var handle: UInt64 {
        get { withUnsafeMutablePointer(to: &__boltffiHandle) { UInt64(boltffi_atomic_u64_load($0)) } }
        set { __boltffiHandle = UInt64(newValue) }
    }

    @usableFromInline init(handle: UInt64) {
        self.handle = handle
    }

    @usableFromInline func __boltffiTakeHandle() -> UInt64 {
        withUnsafeMutablePointer(to: &__boltffiHandle) { UInt64(boltffi_atomic_u64_exchange($0, 0)) }
    }

    deinit {
        let handle = __boltffiTakeHandle()
        if handle != 0 { boltffi_release_class_demo_default_counter(handle) }
    }

    public init(start: Int32 = 10) {
        self.handle = boltffi_init_class_demo_default_counter_new(start)
    }

    public init(withOffset start: Int32 = 20, offset: Int32) {
        self.handle = boltffi_init_class_demo_default_counter_with_offset(start, offset)
    }

    public static func sum(left: Int32 = 1, right: Int32 = 2) -> Int32 {
        return boltffi_method_class_demo_default_counter_sum(left, right)
    }

    public func offset(step: Int32 = 1) -> Int32 {
        return boltffi_method_class_demo_default_counter_offset(self.handle, step)
    }

    public func asyncOffset(step: Int32 = 3) async throws -> Int32 {
        let boltffiFuture = boltffi_method_class_demo_default_counter_async_offset(self.handle, step)
        return try await boltffiAsyncCall(
            futureHandle: boltffiFuture,
            poll: boltffi_async_method_class_demo_default_counter_async_offset_poll,
            cancel: boltffi_async_method_class_demo_default_counter_async_offset_cancel,
            free: boltffi_async_method_class_demo_default_counter_async_offset_free
        ) { boltffiFuture, boltffiStatus in
            let boltffiResult = boltffi_async_method_class_demo_default_counter_async_offset_complete(boltffiFuture, boltffiStatus)
            let boltffiStatusCode = boltffiStatus!.pointee.code
            guard boltffiStatusCode == 0 else {
                throw FfiError(message: "FFI failed in async completion with code \(boltffiStatusCode)")
            }
            return boltffiResult
        }
    }
}

public protocol DefaultHandler: AnyObject {
    func apply(value: Int32) -> Int32
}

private final class DefaultHandlerWrapper {
    let impl: DefaultHandler

    init(_ impl: DefaultHandler) {
        self.impl = impl
    }
}

private var boltffiDefaultHandlerVtable: ___DefaultHandlerVTable = {
    ___DefaultHandlerVTable(
        free: { handle in
            guard handle != 0 else { return }
            Unmanaged<DefaultHandlerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).release()
        },
        clone: { handle in
            guard handle != 0 else { return 0 }
            let wrapper = Unmanaged<DefaultHandlerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!)
            _ = wrapper.retain()
            return handle
        },
        apply: { handle, value in
            guard handle != 0 else { fatalError("invalid callback handle") }
            let wrapper = Unmanaged<DefaultHandlerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).takeUnretainedValue()
            return wrapper.impl.apply(value: value)
        }
    )
}()

private enum DefaultHandlerBridge {
    private static let register: Void = {
        boltffi_register_callback_demo_default_handler(&boltffiDefaultHandlerVtable)
    }()

    static func create(_ impl: DefaultHandler) -> BoltFFICallbackHandle {
        _ = register
        let wrapper = DefaultHandlerWrapper(impl)
        let handle = UInt64(UInt(bitPattern: Unmanaged.passRetained(wrapper).toOpaque()))
        return boltffi_create_callback_demo_default_handler(handle)
    }
}

public func formatDefaults(
    name: String,
    greeting: String = "hello",
    enabled: Bool = true,
    ratio: Float = 0.5,
    mode: DefaultMode = DefaultMode.quiet,
    weight: Double? = 1.5,
    handler: DefaultHandler? = nil
) -> String {
    let boltffiNameBytes = boltffiEncode { boltffiNameWriter in boltffiNameWriter.writeString(name) }
    return boltffiNameBytes.withUnsafeBufferPointer { boltffiNameBuffer in
        let boltffiGreetingBytes = boltffiEncode { boltffiGreetingWriter in boltffiGreetingWriter.writeString(greeting) }
        return boltffiGreetingBytes.withUnsafeBufferPointer { boltffiGreetingBuffer in
            let boltffiWeightBytes = boltffiEncode { boltffiWeightWriter in boltffiWeightWriter.writeOptional(weight) { writer, value in writer.writeF64(value) } }
            return boltffiWeightBytes.withUnsafeBufferPointer { boltffiWeightBuffer in
                let boltffiResult = boltffi_function_demo_format_defaults(
                    boltffiNameBuffer.baseAddress!,
                    UInt(boltffiNameBuffer.count),
                    boltffiGreetingBuffer.baseAddress!,
                    UInt(boltffiGreetingBuffer.count),
                    enabled,
                    ratio,
                    mode.cValue,
                    boltffiWeightBuffer.baseAddress!,
                    UInt(boltffiWeightBuffer.count),
                    handler.map { boltffiCallback in DefaultHandlerBridge.create(boltffiCallback) } ?? BoltFFICallbackHandle(handle: 0, vtable: nil)
                )
                defer { boltffi_free_buf(boltffiResult) }
                return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in boltffiReader.readString() }
            }
        }
    }
}

public func asyncDefault(value: UInt32 = 9) async throws -> UInt32 {
    let boltffiFuture = boltffi_function_demo_async_default(value)
    return try await boltffiAsyncCall(
        futureHandle: boltffiFuture,
        poll: boltffi_async_function_demo_async_default_poll,
        cancel: boltffi_async_function_demo_async_default_cancel,
        free: boltffi_async_function_demo_async_default_free
    ) { boltffiFuture, boltffiStatus in
        let boltffiResult = boltffi_async_function_demo_async_default_complete(boltffiFuture, boltffiStatus)
        let boltffiStatusCode = boltffiStatus!.pointee.code
        guard boltffiStatusCode == 0 else {
            throw FfiError(message: "FFI failed in async completion with code \(boltffiStatusCode)")
        }
        return boltffiResult
    }
}

public func defaultAmount(amount: Amount = DefaultAmount(value: 5)) -> Amount {
    let boltffiAmountBytes = boltffiEncode { boltffiAmountWriter in amount.encode(to: &boltffiAmountWriter) }
    return boltffiAmountBytes.withUnsafeBufferPointer { boltffiAmountBuffer in
        let boltffiResult = boltffi_function_demo_default_amount(boltffiAmountBuffer.baseAddress!, UInt(boltffiAmountBuffer.count))
        defer { boltffi_free_buf(boltffiResult) }
        return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in DefaultAmount.decode(from: &boltffiReader) }
    }
}

public typealias Amount = DefaultAmount
