boltffi_backend/tests/snapshots/swift__swift_target_renders_primitive_function_stack.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"exports/single_function\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public func add(left: Int32, right: Int32) -> Int32 {
    return boltffi_function_demo_add(left, right)
}
