boltffi_backend/tests/snapshots/swift__swift_target_renders_result_values_through_shared_codec.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"exports/result_values\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public struct Response: Hashable, Equatable, Sendable {
    public var result: Swift.Result<Int32, FfiError>

    public init(result: Swift.Result<Int32, FfiError>) {
        self.result = result
    }

    @inlinable static func decode(from reader: inout WireReader) -> Response {
        Response(result: reader.readResult({ reader in reader.readI32() }, { reader in FfiError(message: reader.readString()) }))
    }

    @inlinable func encode(to writer: inout WireWriter) {
        writer.writeResult(self.result, { writer, boltffiValue0 in writer.writeI32(boltffiValue0) }, { writer, boltffiValue0 in writer.writeString(boltffiValue0.message) })
    }
}

public func resultToString(value: Swift.Result<Int32, FfiError>) -> String {
    let boltffiValueBytes = boltffiEncode { boltffiValueWriter in boltffiValueWriter.writeResult(value, { boltffiValueWriter, boltffiValue0 in boltffiValueWriter.writeI32(boltffiValue0) }, { boltffiValueWriter, boltffiValue0 in boltffiValueWriter.writeString(boltffiValue0.message) }) }
    return boltffiValueBytes.withUnsafeBufferPointer { boltffiValueBuffer in
        let boltffiResult = boltffi_function_demo_result_to_string(boltffiValueBuffer.baseAddress!, UInt(boltffiValueBuffer.count))
        defer { boltffi_free_buf(boltffiResult) }
        return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in boltffiReader.readString() }
    }
}

public func echoResponse(response: Response) -> Response {
    let boltffiResponseBytes = boltffiEncode { boltffiResponseWriter in response.encode(to: &boltffiResponseWriter) }
    return boltffiResponseBytes.withUnsafeBufferPointer { boltffiResponseBuffer in
        let boltffiResult = boltffi_function_demo_echo_response(boltffiResponseBuffer.baseAddress!, UInt(boltffiResponseBuffer.count))
        defer { boltffi_free_buf(boltffiResult) }
        return boltffiDecodeOwnedBuf(boltffiResult.ptr, Int(boltffiResult.len)) { boltffiReader in Response.decode(from: &boltffiReader) }
    }
}
