boltffi_backend/tests/snapshots/swift__swift_target_renders_returned_callback_direct_vector_returns.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_partial_fixture(\"callback/callback_handle_direct_vector_return\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public protocol Producer: AnyObject {
    func values() -> [Int32]
}

private final class ProducerWrapper {
    let impl: Producer

    init(_ impl: Producer) {
        self.impl = impl
    }
}
private protocol ProducerBridgeable: Producer {
    func _boltffiRetainedCallbackHandle() -> BoltFFICallbackHandle
}

private final class ProducerProxy: Producer, ProducerBridgeable {
    private let handle: BoltFFICallbackHandle

    init(_ handle: BoltFFICallbackHandle) {
        self.handle = handle
    }

    deinit {
        ProducerBridge.release(handle)
    }

    func _boltffiRetainedCallbackHandle() -> BoltFFICallbackHandle {
        ProducerBridge.clone(handle)
    }

    func values() -> [Int32] {
        guard let vtable = self.handle.vtable?.assumingMemoryBound(to: ___ProducerVTable.self),
              let invoke = vtable.pointee.values else {
            fatalError("missing callback vtable entry")
        }
        let boltffiResult = invoke(self.handle.handle)
        defer { boltffi_free_buf(boltffiResult) }
        guard boltffiResult.len > 0, let boltffiResultPtr = boltffiResult.ptr else { return [] }
        let boltffiResultCount = Int(boltffiResult.len) / MemoryLayout<Int32>.stride
        let boltffiResultRaw = UnsafeRawPointer(boltffiResultPtr).assumingMemoryBound(to: Int32.self)
        return Array(UnsafeBufferPointer(start: boltffiResultRaw, count: boltffiResultCount))
    }
}

private var boltffiProducerVtable: ___ProducerVTable = {
    ___ProducerVTable(
        free: { handle in
            guard handle != 0 else { return }
            Unmanaged<ProducerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).release()
        },
        clone: { handle in
            guard handle != 0 else { return 0 }
            let wrapper = Unmanaged<ProducerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!)
            _ = wrapper.retain()
            return handle
        },
        values: { handle in
            guard handle != 0 else { fatalError("invalid callback handle") }
            let wrapper = Unmanaged<ProducerWrapper>.fromOpaque(UnsafeRawPointer(bitPattern: UInt(handle))!).takeUnretainedValue()
            let boltffiResult = wrapper.impl.values()
            return boltffiResult.withUnsafeBufferPointer { boltffiResultBuffer in
                return boltffi_buf_from_bytes(UnsafeRawPointer(boltffiResultBuffer.baseAddress)?.assumingMemoryBound(to: UInt8.self), UInt(boltffiResultBuffer.count * MemoryLayout<Int32>.stride))
            }
        }
    )
}()

private enum ProducerBridge {
    private static let register: Void = {
        boltffi_register_callback_demo_producer(&boltffiProducerVtable)
    }()
    static func release(_ handle: BoltFFICallbackHandle) {
        guard handle.handle != 0,
              let vtable = handle.vtable?.assumingMemoryBound(to: ___ProducerVTable.self),
              let free = vtable.pointee.free else { return }
        free(handle.handle)
    }

    static func clone(_ handle: BoltFFICallbackHandle) -> BoltFFICallbackHandle {
        guard handle.handle != 0,
              let vtable = handle.vtable?.assumingMemoryBound(to: ___ProducerVTable.self),
              let clone = vtable.pointee.clone else {
            return BoltFFICallbackHandle(handle: 0, vtable: nil)
        }
        return BoltFFICallbackHandle(handle: clone(handle.handle), vtable: handle.vtable)
    }

    static func create(_ impl: Producer) -> BoltFFICallbackHandle {
        _ = register
        if let bridgeable = impl as? ProducerBridgeable {
            return bridgeable._boltffiRetainedCallbackHandle()
        }
        let wrapper = ProducerWrapper(impl)
        let handle = UInt64(UInt(bitPattern: Unmanaged.passRetained(wrapper).toOpaque()))
        return boltffi_create_callback_demo_producer(handle)
    }
    static func wrap(_ handle: BoltFFICallbackHandle) -> any Producer {
        _ = register
        return ProducerProxy(handle)
    }
}

public func makeProducer() -> Producer {
    return ProducerBridge.wrap(boltffi_function_demo_make_producer())
}
