boltffi_backend/tests/snapshots/swift__swift_target_renders_returned_closure_functions.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"exports/returned_closure_function\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public func makeCounter() -> (UInt32) -> UInt32 {
    struct BoltFFIReturnedClosureU32ToU32 {
        var invoke: (@convention(c) (UnsafeMutableRawPointer?, UInt32) -> UInt32)? = nil
        var context: UnsafeMutableRawPointer? = nil
        var release: (@convention(c) (UnsafeMutableRawPointer?) -> Void)? = nil
    }
    final class BoltFFIReturnedClosureU32ToU32Owner {
        var storage: BoltFFIReturnedClosureU32ToU32
        init(_ storage: BoltFFIReturnedClosureU32ToU32) {
            self.storage = storage
        }
        deinit {
            storage.release?(storage.context)
        }
    }
    var boltffiResult: BoltFFIReturnedClosureU32ToU32 = BoltFFIReturnedClosureU32ToU32()
    let boltffiClosureStatus = boltffi_function_demo_make_counter(&boltffiResult)
    guard boltffiClosureStatus.code == 0 else {
        fatalError("returned closure registration failed with code \(boltffiClosureStatus.code)")
    }
    let boltffiResultOwner = BoltFFIReturnedClosureU32ToU32Owner(boltffiResult)
    return { arg0 in
        guard let boltffiClosureInvoke = boltffiResultOwner.storage.invoke else {
            fatalError("returned closure was released")
        }
        return boltffiClosureInvoke(boltffiResultOwner.storage.context, arg0)
    }
}
