boltffi_backend/tests/snapshots/swift__swift_target_renders_stream_protocols.snap
---
source: boltffi_backend/tests/swift.rs
expression: "rendered_fixture(\"stream/protocol_functions\")"
---
===== DemoFFI.swift =====
// Auto-generated by BoltFFI. Do not edit.
// swiftlint:disable all
// swiftformat:disable all

import Foundation
import DemoFFI

public struct FfiError: Error {
    public let message: String

    public init(message: String) {
        self.message = message
    }
}

public struct Point: Hashable, Equatable, Sendable {
    public var x: Double
    public var y: Double

    public init(x: Double, y: Double) {
        self.x = x
        self.y = y
    }

    @usableFromInline init(fromC c: ___Point) {
        self.init(x: c.x, y: c.y)
    }

    @usableFromInline var cValue: ___Point {
        ___Point(x: x, y: y)
    }
}

public final class Engine {
    private var __boltffiHandle: UInt64 = 0

    @usableFromInline var handle: UInt64 {
        get { withUnsafeMutablePointer(to: &__boltffiHandle) { UInt64(boltffi_atomic_u64_load($0)) } }
        set { __boltffiHandle = UInt64(newValue) }
    }

    @usableFromInline init(handle: UInt64) {
        self.handle = handle
    }

    @usableFromInline func __boltffiTakeHandle() -> UInt64 {
        withUnsafeMutablePointer(to: &__boltffiHandle) { UInt64(boltffi_atomic_u64_exchange($0, 0)) }
    }

    deinit {
        let handle = __boltffiTakeHandle()
        if handle != 0 { boltffi_release_class_demo_engine(handle) }
    }
}


extension Engine {
    public func points() -> PointsSubscription {
        let boltffiSubscription = boltffi_stream_demo_engine_points_subscribe(self.handle)
        return PointsSubscription(
            handle: boltffiSubscription,
            readBatch: { subscription, batchSize in
                return boltffiReadDirectStreamBatch(
                    subscription: subscription,
                    batchSize: batchSize,
                    popBatch: boltffi_stream_demo_engine_points_pop_batch
                ) { (rawItems: UnsafeBufferPointer<___Point>) in
                    var boltffiStreamBatch = [Point]()
                    boltffiStreamBatch.reserveCapacity(rawItems.count)
                    for rawItem in rawItems {
                        boltffiStreamBatch.append(Point(fromC: rawItem))
                    }
                    return boltffiStreamBatch
                }
            },
            wait: boltffi_stream_demo_engine_points_wait,
            unsubscribe: boltffi_stream_demo_engine_points_unsubscribe,
            free: boltffi_stream_demo_engine_points_free
        )
    }
}

public final class PointsSubscription {
    private let handle: UInt64
    private let readBatch: (UInt64, UInt) -> [Point]
    private let wait: (UInt64, UInt32) -> Int32
    private let unsubscribeCall: (UInt64) -> Void
    private let free: (UInt64) -> Void
    private var closed = false

    @usableFromInline init(
        handle: UInt64,
        readBatch: @escaping (UInt64, UInt) -> [Point],
        wait: @escaping (UInt64, UInt32) -> Int32,
        unsubscribe: @escaping (UInt64) -> Void,
        free: @escaping (UInt64) -> Void
    ) {
        self.handle = handle
        self.readBatch = readBatch
        self.wait = wait
        self.unsubscribeCall = unsubscribe
        self.free = free
    }

    deinit {
        if handle != 0 {
            free(handle)
        }
    }

    public func popBatch(maxCount: UInt = 16) -> [Point] {
        if handle == 0 {
            return []
        }
        return readBatch(handle, maxCount)
    }

    public func wait(timeout: UInt32) -> Int32 {
        if handle == 0 {
            return -1
        }
        return wait(handle, timeout)
    }

    public func unsubscribe() {
        if handle == 0 || closed {
            return
        }
        closed = true
        unsubscribeCall(handle)
    }
}


extension Engine {
    public func names() -> _Concurrency.AsyncStream<String> {
        _Concurrency.AsyncStream<String>(bufferingPolicy: .unbounded) { continuation in
            let boltffiSubscription = boltffi_stream_demo_engine_names_subscribe(self.handle)
            guard boltffiSubscription != 0 else {
                continuation.finish()
                return
            }
            let context = BoltFFIStreamContext<String>(
                subscription: boltffiSubscription,
                batchSize: 16,
                readBatch: { subscription, batchSize in
                    return boltffiReadWireStreamBatch(
                        subscription: subscription,
                        batchSize: batchSize,
                        popBatch: boltffi_stream_demo_engine_names_pop_batch,
                        freeBuf: boltffi_free_buf
                    ) { reader in
                        let boltffiStreamCount = Int(reader.readU32())
                        var boltffiStreamBatch = [String]()
                        boltffiStreamBatch.reserveCapacity(boltffiStreamCount)
                        for _ in 0..<boltffiStreamCount {
                            boltffiStreamBatch.append(reader.readString())
                        }
                        return boltffiStreamBatch
                    }
                },
                poll: boltffi_stream_demo_engine_names_poll,
                unsubscribe: boltffi_stream_demo_engine_names_unsubscribe,
                free: boltffi_stream_demo_engine_names_free,
                atomicCompareExchange: boltffi_atomic_u8_cas,
                yieldItem: { item in _ = continuation.yield(item) },
                finish: { continuation.finish() }
            )
            continuation.onTermination = { @Sendable _ in context.requestTermination() }
            context.start()
        }
    }
}


extension Engine {
    public func ticks(callback: @escaping (Int32) -> Void) -> TicksCancellable {
        let boltffiSubscription = boltffi_stream_demo_engine_ticks_subscribe(self.handle)
        if boltffiSubscription == 0 {
            return TicksCancellable {}
        }
        let context = BoltFFIStreamContext<Int32>(
            subscription: boltffiSubscription,
            batchSize: 16,
            readBatch: { subscription, batchSize in
                return boltffiReadDirectStreamBatch(
                    subscription: subscription,
                    batchSize: batchSize,
                    popBatch: boltffi_stream_demo_engine_ticks_pop_batch
                ) { (rawItems: UnsafeBufferPointer<Int32>) in
                    var boltffiStreamBatch = [Int32]()
                    boltffiStreamBatch.reserveCapacity(rawItems.count)
                    for rawItem in rawItems {
                        boltffiStreamBatch.append(rawItem)
                    }
                    return boltffiStreamBatch
                }
            },
            poll: boltffi_stream_demo_engine_ticks_poll,
            unsubscribe: boltffi_stream_demo_engine_ticks_unsubscribe,
            free: boltffi_stream_demo_engine_ticks_free,
            atomicCompareExchange: boltffi_atomic_u8_cas,
            yieldItem: callback,
            finish: {}
        )
        context.start()
        return TicksCancellable { context.requestTermination() }
    }
}

public final class TicksCancellable {
    private let cancelAction: () -> Void
    private var cancelled = false

    @usableFromInline init(_ cancelAction: @escaping () -> Void = {}) {
        self.cancelAction = cancelAction
    }

    deinit {
        cancel()
    }

    public func cancel() {
        if cancelled {
            return
        }
        cancelled = true
        cancelAction()
    }
}

private enum BoltFFIStreamPollResult: Int8 {
    case ready = 0
    case closed = 1
}

@inline(__always)
